WIP: Try adding an activation command to get ext to work
Extension works in debug mode, and during tests, but does not work when
I install it as an extension in my editor. I think it might be because
the extension is not getting activated, so I am adding an activation
command.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onLanguage:php"
+		"onLanguage:php",
+		"onCommand:grayPhpInHtmlComments.activate"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -23,6 +24,12 @@
 				"injectTo": [
 					"text.html.php"
 				]
+			}
+		],
+		"commands": [
+			{
+				"command": "grayPhpInHtmlComments.activate",
+				"title": "Gray PHP In HTML Comments: Activate"
 			}
 		]
 	},
