--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Gray out php nested in html comments, so that it looks nicer.",
 	"repository": "https://github.com/parkernilson/vsc-gray-php-in-html-comments",
 	"publisher": "parkernilson",
-	"logo": "./GrayPHPInHTMLCommentsLogo.png",
+	"icon": "https://github.com/parkernilson/vsc-gray-php-in-html-comments/blob/master/icon.png",
 	"version": "0.0.6",
 	"engines": {
 		"vscode": "^1.44.0"
