--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"author": "Parker Nilson",
 	"icon": "icon.png",
 	"version": "1.0.0",
+	"license": "LICENSE",
 	"engines": {
 		"vscode": "^1.44.0"
 	},
